--- a/package.json
+++ b/package.json
@@ -5,15 +5,21 @@
   "repository": "https://github.com/handy-engine/vue-application-example.git",
   "author": "DZG <dongzhigang_bit@126.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "cross-env NODE_ENV=development node scripts/development.js"
+  },
   "devDependencies": {
+    "@babel/core": "^7.9.0",
     "@types/node": "^13.11.0",
     "@types/webpack": "^4.41.10",
     "babel-loader": "^8.1.0",
     "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "eslint-loader": "^4.0.0",
+    "html-webpack-plugin": "^4.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "vue-loader": "^15.9.1",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.42.1",
     "webpack-chain": "^6.4.0",
     "webpack-dev-server": "^3.10.3",
